tests/typechecker/should_pass/nametype_ta.csp
X :: {Int}
nametype X = {0}
