tests/typechecker/should_fail/type_annotations_20.csp
Y :: Bool => X

datatype X = Y.Int

